k3s/homepage/homepage.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage-sa
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 250Mi
          volumeMounts:
            - name: config-volume
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: config-volume
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
            - name: config-volume
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
            - name: config-volume
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: config-volume
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
            - name: logo-volume
              mountPath: /app/public/logo-compresse.png
              subPath: logo-compresse.png
            - name: logo-512-volume
              mountPath: /app/public/logo-512.png
              subPath: logo-512.png
            - name: logo-192-volume
              mountPath: /app/public/logo-192.png
              subPath: logo-192.png
      volumes:
        - name: config-volume
          configMap:
            name: homepage-config
        - name: logo-volume
          configMap:
            name: homepage-logo
        - name: logo-512-volume
          configMap:
            name: homepage-logo-512
        - name: logo-192-volume
          configMap:
            name: homepage-logo-192

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: services
spec:
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
# Exposition publique
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: services
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Homepage"
    gethomepage.dev/description: "Tableau de bord central"
    gethomepage.dev/group: "Administration"
    gethomepage.dev/icon: "homepage.png"
    gethomepage.dev/pod-selector: "app=homepage"
spec:
  tls:
    - hosts:
        - homepage.quick-shift.fr
      secretName: homepage-tls-quickshift
  rules:
    - host: homepage.quick-shift.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
